# embedded

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cm.sh  compile_commands.json
apps/auv/: CMakeLists.txt
apps/auv/include/: cyw43_interact.hpp  lwipopts.h  ultrasonic.hpp
apps/auv/source/: cyw43_interact.cpp  main_pico.cpp  ultrasonic.cpp
apps/hello-blinky/: CMakeLists.txt
apps/hello-blinky/include/: lwipopts.h
apps/hello-blinky/src/: main_pico.cpp
apps/pico_testing/: CMakeLists.txt
apps/pico_testing/source/: main_pico.cpp
apps/ultrasonic/: CMakeLists.txt
apps/ultrasonic/include/: lwipopts.h
apps/ultrasonic/source/: main.cpp  main_pico.cpp
boards/pico/: board.cmake
boards/stm32f746g_disco/: board.cmake
cmake/: toolchain-arm-none-eabi.cmake
pico-sdk/src/rp2_common/pico_cyw43_driver/pioasm/src/pioasmBuild-stamp/: pioasmBuild-source_dirinfo.txt
pico-sdk/src/rp2_common/pico_cyw43_driver/pioasm/tmp/: pioasmBuild-cfgcmd.txt  pioasmBuild-mkdirs.cmake
